KZGPrecompile test coverage and versionedhash checks, fixes bug on adding v3 engine api at startup
Signed-off-by: Justin Florentine <justin+github@florentine.us>